tests/health/gold/sdk/tests__lsp__with__space__foo.toit.gold
tests/lsp/with space/foo.toit:8:3: error: Argument mismatch for 'bar'
Too few arguments provided
  bar
  ^~~
